# blockchain-parser-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
migrations/2021-08-02-160239_blocks/: down.sql  up.sql
src/: eth_client.rs  main.rs  models.rs  schema.rs
