[package]
name = "eth-blockchain-parser-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.9.0", features = ["full"] }
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
async-recursion = "0.3.2"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
